--- a/locales/en/media.json
+++ b/locales/en/media.json
@@ -20,6 +20,9 @@
   "tab3Title": "Featured Articles",
   "tab3Category1": "Recent",
   "tab3Category2": "Older",
+  "video52Date": "MAY 29, 2025",
+  "video52Subtitle": "Investor News",
+  "video52Title": "Nord Silver Drilling Program in Ontario's Castle Mine District",
   "video1Date": "MAY 9, 2024",
   "video1Subtitle": "Stocks to Watch",
   "video1Title": "North America's Next Primary Silver Producer",
