--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,9 +1,9 @@
 {
   "heroTitle": "Highest Silver Grades in the World",
-  "heroDescription": "Building the Next World Class Critical Metals Project along the North American Battery Corridor",
+  "heroDescription": "",
   "heroButton": "Watch The Latest Interview",
-  "banner": "89,853 g/t Silver (2,621 oz/ton)",
-  "bannerNote": "Over 0.3m in CS-20-39",
+  "banner": "89,853 g/t Silver over 0.3m",
+  "bannerNote": "",
   "aboutSubtitle": "ABOUT PROJECT",
   "aboutTitle": "From Zero to One: Reviving Northern Ontario's Silver-Cobalt Camp",
   "aboutDescription": "Rich Polymetallic Deposit High-grade Silver, Cobalt, and Gold in a Safe Jurisdiction. Critical Metals Exposure Key Metals Necessary for Renewable Energy and Defence Industries. Naturally Strategic Location Along the Prolific Abitibi Greenstone Belt with a Processing Plant in Place.",
