one more video update

--- a/locales/en/media.json
+++ b/locales/en/media.json
@@ -22,9 +22,13 @@
   "tab3Category1": "Recent",
   "tab3Category2": "Older",
 
+  "video_2025_07_09_Date": "JULY 9, 2025",
+  "video_2025_07_09_Subtitle": "Investor News",
+  "video_2025_07_09_Title": "Silver on the Brink of “Going Ballistic”",
+
   "video_2025_07_02_Date": "JULY 2, 2025",
-  "video_2025_07_02_Subtitle": "Investor News",
-  "video_2025_07_02_Title": "Silver on the Brink of “Going Ballistic”",
+  "video_2025_07_02_Subtitle": "Proactive",
+  "video_2025_07_02_Title": "Nord mobilizes at Castle Silver Mine, targets 2026 Silver production",
   
   "video_2025_05_29_Date": "MAY 29, 2025",
   "video_2025_05_29_Subtitle": "Investor News",
