updated end of mcto thank the sweet lord

--- a/locales/en/investors.json
+++ b/locales/en/investors.json
@@ -39,6 +39,7 @@
   "financial2024Q1": "Q1",
   "financial2024Q2": "Q2",
   "financial2024Q3": "Q3",
+  "financial2024Q4": "Q4",
   "financial2023": "2023",
   "financial2023Q1": "Q1",
   "financial2023Q2": "Q2",
@@ -75,6 +76,7 @@
   "management2024Q1": "Q1",
   "management2024Q2": "Q2",
   "management2024Q3": "Q3",
+  "management2024Q4": "Q4",
   "management2023": "2023",
   "management2023Q1": "Q1",
   "management2023Q2": "Q2",
