--- a/locales/en/investors.json
+++ b/locales/en/investors.json
@@ -35,6 +35,8 @@
   "technicalReportButton": "Download",
   "financialSubtitle": "FINANCIALS",
   "financialTitle": "Financial<br /> Statements",
+  "financial2025": "2025",
+  "financial2025Q1": "Q1",
   "financial2024": "2024",
   "financial2024Q1": "Q1",
   "financial2024Q2": "Q2",
@@ -72,6 +74,8 @@
   "financial2018Q4": "Q4",
   "managementSubtitle": "FINANCIALS",
   "managementTitle": "Management Discussion & Analysis",
+  "management2025": "2025",
+  "management2025Q1": "Q1",
   "management2024": "2024",
   "management2024Q1": "Q1",
   "management2024Q2": "Q2",
